--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.6.4",
     "axios": "^1.4.0",
     "bootstrap": "^4.6.0",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
